# LuaToCpp_Template

./: CMakeLists.txt
lib/: lua.exp  lua.ilk  lua.lib
src/: main.cpp
src/cengine/: ccommon.cpp  cengine.cpp  cengine.hpp  cobject.cpp
src/scripts/: main.lua
